# synthpopcan

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTES.md  PLANS.md  README.md  RELEASING.md  SECURITY.md  biome.json  package-lock.json  package.json  plan.md  pyproject.toml  pyrightconfig.json  research.md
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_release.yml
.github/workflows/: ci.yml  publish.yml
assets/branding/: README.md
docs/: acknowledgments.md  api.md  api.rst  cli-guide.md  concepts.md  conf.py  control-tables.md  controls.md  data-and-privacy.md  data.md  examples.md  field-primer.md  getting-started.md  glossary.md  index.rst  installation.md  introduction.md  ipf.md  library-getting-started.md  library.md  microdata.md  provenance.md  release-checklist.md  requirements.txt  small-area.md  sources.md  statcan.md  status.md  tree-generate.md  tree.md  troubleshooting.md  validate.md  web-app.md  which-workflow.md
docs/_static/: library-getting-started.ipynb
docs/superpowers/plans/: 2026-06-25-small-area-linked-synthesis.md  2026-06-25-tract-level-linked-synthesis.md
docs/workflows/: microdata-to-ipf.md  microdata-to-tree.md  model-output-to-ipf.md
scripts/: benchmark_ipf.py  benchmark_ipf_backends.py  benchmark_tree_linked.py  benchmarks.py  build_all_model_packages.py  build_montreal_ct_controls.py  build_ontario_ada_controls.py  build_quebec_ada_controls.py  build_quebec_city_ct_controls.py  build_quebec_model_package.py
src/synthpopcan/: __init__.py  api.py  benchmarks.py  calibration.py  census_microdata.py  cli.py  cli_geo.py  cli_ipf.py  cli_microdata.py  cli_output.py  cli_small_area.py  cli_tree.py  console.py  controls.py  diagnostics.py  ipf.py  localdata.py  map_render.py  microdata.py  small_area_controls.py  small_area_synthesis.py  sources.py  statcan.py  tree.py  tree_benchmark.py  validation.py  web_demo_models.py  web_wds.py  webapp.py
src/synthpopcan/models/: __init__.py  demo-linked-household-person-package.json
src/synthpopcan/web/: __init__.py  app.mjs  browser-job.mjs  csv.mjs  index.html  ipf.mjs  preview.mjs  result-ui.mjs  starter-files.mjs  statcan.mjs  styles.css  tree-model.mjs  wds-normalize.mjs  worker.mjs  workflow-views.mjs  zip.mjs
tests/: test_api.py  test_benchmarks.py  test_calibration.py  test_census_microdata.py  test_cli.py  test_cli_output.py  test_console.py  test_controls.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_docs.py  test_ipf.py  test_localdata.py  test_map_render.py  test_microdata.py  test_models.py  test_small_area_controls.py  test_small_area_synthesis.py  test_sources.py  test_statcan.py  test_statcan_live.py  test_tree.py  test_tree_benchmark.py  test_validation.py  test_webapp.py  test_workflows.py
tests/fixtures/workflows/linked_tree/: hierarchical.csv
tests/fixtures/workflows/microdata_ipf/: controls.csv  expected-seed.csv  hierarchical.csv
tests/fixtures/workflows/microdata_tree/: expected-person-training.csv  hierarchical.csv
tests/fixtures/workflows/wds_ipf/: categories-filled.json  categories-template.json  expected-controls.csv  seed.csv  wds-table.csv
tests/web/: csv.test.mjs  ipf.test.mjs  preview.test.mjs  starter-files.test.mjs  statcan.test.mjs  tree-model.test.mjs  wds-normalize.test.mjs
