[project]
name = "synthpopcan"
version = "0.1.0"
description = "Canadian synthetic population tooling for StatsCan margin tables and Census microdata."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Darcy Quesnel", email = "darcy.quesnel@gmail.com" },
]
keywords = [
  "synthetic population",
  "census",
  "statistics canada",
  "ipf",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.scripts]
synthpopcan = "synthpopcan.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
