[project]
name = "synthpopcan"
version = "0.1.0"
description = "Canadian synthetic population tooling for StatCan margin tables and Census microdata."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Darcy Quesnel", email = "darcy.quesnel@gmail.com" },
]
keywords = [
  "synthetic population",
  "census",
  "statistics canada",
  "ipf",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.4.1",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/dlq/synthpopcan"
Documentation = "https://synthpopcan.readthedocs.io/"
Source = "https://github.com/dlq/synthpopcan"
Issues = "https://github.com/dlq/synthpopcan/issues"

[project.scripts]
synthpopcan = "synthpopcan.cli:cli"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.18",
]
docs = [
    "doc8>=2.0.0",
    "mdformat>=1.0.0",
    "myst-parser>=5.1.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live_statcan: opt-in tests that call live Statistics Canada WDS services",
  "performance: opt-in timing-sensitive tests for local performance checks",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.doc8]
ignore-path = ["docs/_build"]
max-line-length = 88

[tool.uv]
package = true
